middlewareDeployment/consul/consul-svc-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: consul-lb
  namespace: consul-ns
  annotations:
    lb.kubesphere.io/v1alpha1: openelb
    protocol.openelb.kubesphere.io/v1alpha1: layer2
    eip.openelb.kubesphere.io/v1alpha2: eip-pool
spec:
  type: LoadBalancer
  selector:
    app: consul
  ports:
    - name: http
      port: 8500
      targetPort: 8500
