middlewareDeployment/consul/consul-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: consul-ui
  namespace: consul-ns
spec:
  type: ClusterIP
  selector:
    app: consul
  ports:
    - name: http
      port: 8500
      targetPort: 8500
