middlewareDeployment/consul/consul-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: traefik-gateway
  namespace: consul-ns
spec:
  gatewayClassName: traefik
  listeners:
    - name: web
      protocol: HTTP
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: consul
  namespace: consul-ns
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: consul-ns
  hostnames:
    - consul.shixiaochuang.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: consul-ui
          port: 8500
