middlewareDeployment/consul/consul-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: consul
  namespace: consul-ns
spec:
  ingressClassName: nginx
  rules:
    - host: consul.shixiaochuang.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: consul-ui
                port:
                  number: 8500
